<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rainbow"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingTop="40dp"
    android:weightSum="1"
    tools:context="hu.ait.android.minesweeper.MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="#A49"
            android:textSize="20dp" />
    </com.facebook.shimmer.ShimmerFrameLayout>


    <hu.ait.android.minesweeper.MinesweeperView
        android:id="@+id/minesweeperView"
        android:layout_width="200dp"
        android:layout_height="200dp" />


    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/flag_toggle"
        android:textOn="@string/try_toggle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_btn" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart" />
    </LinearLayout>

    <TextView
        android:id="@+id/winLosetxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textColor="#A49"
        android:textSize="20dp" />


</LinearLayout>
